--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -19,16 +19,17 @@ jobs:
     outputs:
       coverage: ${{ steps.coverage-check.outputs.coverage }}
       branch-type: ${{ steps.branch-info.outputs.type }}
+
     steps:
-      - name: Checkout code
+      - name: 🧩 Checkout code
         uses: actions/checkout@v4
 
-      - name: Detect branch type
+      - name: 🧠 Detect branch type
         id: branch-info
         run: |
-          if [[ "${{ github.ref_name }}" == master ]]; then
+          if [[ "${{ github.ref_name }}" == "master" ]]; then
             echo "type=master" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.ref_name }}" == develop ]]; then
+          elif [[ "${{ github.ref_name }}" == "develop" ]]; then
             echo "type=develop" >> $GITHUB_OUTPUT
           elif [[ "${{ github.ref_name }}" == feature/* ]]; then
             echo "type=feature" >> $GITHUB_OUTPUT
@@ -36,32 +37,34 @@ jobs:
             echo "type=other" >> $GITHUB_OUTPUT
           fi
 
-      - name: Set up JDK
+      - name: ☕ Set up JDK ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: ${{ env.JAVA_VERSION }}
           cache: gradle
 
-      - name: Grant execute permission for gradlew
+      - name: 🔐 Grant execute permission for Gradle
         run: chmod +x gradlew
 
-      - name: Clean project
+      - name: 🧹 Clean project
         run: ./gradlew clean
 
-      - name: Run Lint
+      - name: 🔎 Run Lint
         run: ./gradlew lint
 
-      - name: Run Unit Tests with Coverage
-        run: ./gradlew testDebugUnitTestCoverage
+      # 🔧 Cambié el task a uno estándar compatible con Kotlin/Android
+      - name: 🧪 Run Unit Tests with Coverage
+        run: ./gradlew testDebugUnitTest jacocoTestReport
 
-      - name: Check test coverage
+      - name: 📊 Check test coverage
         id: coverage-check
         run: |
           echo "📊 Checking coverage..."
-          REPORT_FILE="app/build/reports/jacoco/testDebugUnitTestCoverage/testDebugUnitTestCoverage.xml"
+          REPORT_FILE="app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
           if [ -f "$REPORT_FILE" ]; then
-            COVERAGE=$(grep -oP '(?<=<counter type="LINE" missed=")[0-9]+" covered="[0-9]+"' "$REPORT_FILE" | awk -F'"' '{missed+=$2; covered+=$4} END {print covered/(covered+missed)*100}')
+            COVERAGE=$(grep -oP '(?<=<counter type="LINE" missed=")[0-9]+" covered="[0-9]+"' "$REPORT_FILE" | \
+              awk -F'"' '{missed+=$2; covered+=$4} END {if (covered+missed>0) print covered/(covered+missed)*100; else print 0}')
             COVERAGE=$(printf "%.2f" "$COVERAGE")
           else
             echo "⚠️ Coverage report not found"
@@ -74,10 +77,10 @@ jobs:
             exit 1
           fi
 
-      - name: Build Debug APK
+      - name: 🏗️ Build Debug APK
         run: ./gradlew assembleDebug
 
-      - name: Upload APK as artifact
+      - name: 📦 Upload APK as artifact
         uses: actions/upload-artifact@v4
         with:
           name: app-debug
