--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -1,123 +1,47 @@
-name: Android CI/CD
+name: CI - Kotlin Tests & Coverage
 
 on:
   push:
-    branches:
-      - develop
-      - master
-      - 'feature/*'
+    branches: [ main, develop, 'feature/**' ]
   pull_request:
-    branches:
-      - develop
-      - master
-    types: [opened, synchronize, reopened, ready_for_review, closed]
-
-env:
-  MIN_COVERAGE: 80
-  JAVA_VERSION: 17
-  GRADLE_OPTS: -Dorg.gradle.daemon=false
+    branches: [ main, develop, 'feature/**' ]
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
-    outputs:
-      coverage: ${{ steps.coverage-check.outputs.coverage }}
-      branch-type: ${{ steps.branch-info.outputs.type }}
-
+    
     steps:
-      - name: 🧩 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🧠 Detect branch type
-        id: branch-info
-        run: |
-          if [[ "${{ github.ref_name }}" == "master" ]]; then
-            echo "type=master" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.ref_name }}" == "develop" ]]; then
-            echo "type=develop" >> $GITHUB_OUTPUT
-          elif [[ "${{ github.ref_name }}" == feature/* ]]; then
-            echo "type=feature" >> $GITHUB_OUTPUT
-          else
-            echo "type=other" >> $GITHUB_OUTPUT
-          fi
-
-      - name: ☕ Set up JDK ${{ env.JAVA_VERSION }}
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: ${{ env.JAVA_VERSION }}
-          cache: gradle
-
-      - name: 🔐 Grant execute permission for Gradle
-        run: chmod +x gradlew
-
-      - name: 🧹 Clean project
-        run: ./gradlew clean
-
-      - name: 🔎 Run Lint
-        run: ./gradlew lint
-
-      - name: 🧪 Run Unit Tests with Coverage (Kover)
-        # Ejecuta pruebas unitarias Kotlin con reporte XML/HTML
-        run: ./gradlew testDebugUnitTest koverXmlReport koverHtmlReport
-
-      - name: 📊 Check test coverage
-        id: coverage-check
-        run: |
-          echo "📊 Checking coverage..."
-          REPORT_FILE="app/build/reports/kover/report.xml"
-
-          # Mostrar archivos de reporte encontrados (para depuración)
-          find app/build/reports -type f || true
-
-          if [ -f "$REPORT_FILE" ]; then
-            echo "✅ Coverage XML found at $REPORT_FILE"
-            COVERAGE=$(xmllint --xpath \
-              "round(100 * sum(//counter[@type='LINE']/@covered) div sum(//counter[@type='LINE']/(@covered + @missed)))" \
-              "$REPORT_FILE" 2>/dev/null || echo 0)
-          else
-            echo "⚠️ Coverage report not found at ${REPORT_FILE}"
-            COVERAGE=0
-          fi
-
-          echo "coverage=$COVERAGE" >> $GITHUB_OUTPUT
-          echo "Coverage: ${COVERAGE}%"
-
-          # Validar umbral mínimo
-          if (( $(echo "$COVERAGE < $MIN_COVERAGE" | bc -l) )); then
-            echo "❌ Coverage below ${MIN_COVERAGE}%"
-            exit 1
-          fi
-
-      - name: 🏗️ Build Debug APK
-        run: ./gradlew assembleDebug
-
-      - name: 📦 Upload APK as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
-
-      - name: 📤 Upload coverage report (HTML)
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report-html
-          path: app/build/reports/kover/html
-
-  deploy:
-    needs: build-and-test
-    if: github.ref == 'refs/heads/master'
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🔄 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🚀 Simulate Deploy (placeholder)
-        run: echo "Deploying build from master branch..."
-
-  validate-merge-to-develop:
-    if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'develop'
-    runs-on: ubuntu-latest
-    steps:
-      - name: ✅ Validación post-merge a develop
-        run: echo "Se ha hecho merge a develop desde ${{ github.event.pull_request.head.ref }}"
+    - name: Checkout código
+      uses: actions/checkout@v4
+      
+    - name: Configurar JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: gradle
+        
+    - name: Dar permisos de ejecución a gradlew
+      run: chmod +x ./gradlew
+      
+    - name: Ejecutar tests con cobertura
+      run: ./gradlew test jacocoTestReport
+      
+    - name: Verificar cobertura mínima (80%)
+      run: ./gradlew jacocoTestCoverageVerification
+      
+    - name: Generar reporte de cobertura
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: build/reports/jacoco/test/html/
+        
+    - name: Comentar cobertura en PR
+      if: github.event_name == 'pull_request'
+      uses: madrapps/jacoco-report@v1.6.1
+      with:
+        paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
+        token: ${{ secrets.GITHUB_TOKEN }}
+        min-coverage-overall: 80
+        min-coverage-changed-files: 80
