--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,10 @@ name: Android CI - Tests y Cobertura JaCoCo
 on:
   pull_request:
     branches:
+      # Dispara el CI/CD en PRs dirigidos a estas ramas
       - main
       - develop
-      - 'feature/**'
+      - 'feature/**' 
 
 jobs:
   test_and_coverage:
@@ -28,26 +29,66 @@ jobs:
         run: chmod +x gradlew
 
       # 3. 🚀 Ejecuta Tests y VALIDA la Cobertura (80%)
+      # Esta tarea falla el build si la cobertura es menor al umbral (configurado en build.gradle)
       - name: Run Unit Tests and Validate Coverage (80%)
-        # Esta tarea genera el archivo .exec y el reporte XML (necesario para el paso 5)
         run: ./gradlew jacocoTestCoverageVerification
 
-      # 4. Genera el Reporte JaCoCo HTML Report
-      # NOTA: Asegúrate de que tu configuración de Gradle también genere el archivo .xml
-      # La tarea jacocoTestReport debería generarlo por defecto junto al .html
+      # 4. Genera el Reporte JaCoCo HTML y XML
+      # El XML es esencial para el paso 6.
       - name: Generate JaCoCo HTML/XML Report
         run: ./gradlew jacocoTestReport
 
-      # 5. Publica la Cobertura usando una alternativa (simple-elf)
-      - name: Publish Code Coverage Summary (Alternative)
-        uses: simple-elf/all-in-one-coverage@v3 # ⬅️ LA ACCIÓN ALTERNATIVA
+      # 5. Sube el reporte HTML como Artifact
+      - name: Upload JaCoCo HTML Report
+        uses: actions/upload-artifact@v4
         with:
-          # Ruta al archivo XML de JaCoCo que Gradle genera.
-          # Esta ruta es estándar después de ejecutar jacocoTestReport.
-          jacoco-coverage-path: app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml
-          # La acción automáticamente publica el resultado en el PR.
-          
-      # 6. Publica el reporte de tests (JUnit XML/HTML)
+          name: jacoco-report-html
+          path: app/build/reports/jacoco/jacocoTestReport/html/
+          retention-days: 7
+
+      # 6. Publica el Resumen de Cobertura en el PR (Solución Robusta)
+      # Usa una acción oficial de GitHub para leer el XML y postear el comentario.
+      - name: Publish Code Coverage Summary via Script
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            // Importa el módulo para leer archivos del runner
+            const fs = require('fs');
+            // Lee el contenido del reporte XML generado por Gradle
+            const xml = fs.readFileSync('app/build/reports/jacoco/jacocoTestReport/jacocoTestReport.xml', 'utf8');
+
+            // Expresión regular para extraer la cobertura de líneas (LINE)
+            // Busca <counter type="LINE" missed="[N]" covered="[N]"/>
+            const lineCoverageMatch = xml.match(/<counter type="LINE" missed="(\d+)" covered="(\d+)"\/>/);
+            
+            let comment = "## ⚠️ Resumen de Cobertura JaCoCo\n\nNo se pudo calcular la cobertura de líneas. Verifica el log del build.";
+            
+            if (lineCoverageMatch) {
+              const missedLines = parseInt(lineCoverageMatch[1]);
+              const coveredLines = parseInt(lineCoverageMatch[2]);
+              const totalLines = missedLines + coveredLines;
+              const percentage = ((coveredLines / totalLines) * 100).toFixed(2);
+              
+              // Define el ícono y el mensaje basado en el umbral (80%)
+              const icon = percentage >= 80 ? '✅' : '❌';
+
+              comment = `## ${icon} Cobertura de Código JaCoCo\n\n` +
+                        `| Métrica | Cobertura | Umbral Mínimo |\n` +
+                        `| :--- | :---: | :---: |\n` +
+                        `| **Líneas** | **${percentage}%** | **80.00%** |\n\n` +
+                        `_El reporte HTML completo está disponible en el panel de **Artifacts**._`;
+            }
+
+            // Publica el comentario en el Pull Request
+            await github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: comment
+            });
+
+      # 7. Publica el reporte de tests (JUnit XML/HTML)
       - name: Publish JUnit Test Report
         uses: mikepenz/action-junit-report@v4
         if: always() 
