--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,17 +28,21 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 3. 🚀 Ejecuta Tests y VALIDA la Cobertura (80%)
-      # Esta tarea falla el build si la cobertura es menor al umbral (configurado en build.gradle)
-      - name: Run Unit Tests and Validate Coverage (80%)
-        run: ./gradlew jacocoTestCoverageVerification
+      # 3. 🚀 Ejecuta Tests Unitarios
+      - name: Run Unit Tests
+        run: ./gradlew testDebugUnitTest
 
       # 4. Genera el Reporte JaCoCo HTML y XML
       # El XML es esencial para el paso 6.
       - name: Generate JaCoCo HTML/XML Report
         run: ./gradlew jacocoTestReport
 
-      # 5. Sube el reporte HTML como Artifact
+      # 5. VALIDA la Cobertura (80%)
+      # Esta tarea falla el build si la cobertura es menor al umbral (configurado en build.gradle)
+      - name: Validate Coverage (80%)
+        run: ./gradlew jacocoTestCoverageVerification
+
+      # 6. Sube el reporte HTML como Artifact
       - name: Upload JaCoCo HTML Report
         uses: actions/upload-artifact@v4
         with:
@@ -46,7 +50,7 @@ jobs:
           path: app/build/reports/jacoco/jacocoTestReport/html/
           retention-days: 7
 
-      # 6. Publica el Resumen de Cobertura en el PR (Solución Robusta)
+      # 7. Publica el Resumen de Cobertura en el PR (Solución Robusta)
       # Usa una acción oficial de GitHub para leer el XML y postear el comentario.
       - name: Publish Code Coverage Summary via Script
         uses: actions/github-script@v7
@@ -88,7 +92,7 @@ jobs:
               body: comment
             });
 
-      # 7. Publica el reporte de tests (JUnit XML/HTML)
+      # 8. Publica el reporte de tests (JUnit XML/HTML)
       - name: Publish JUnit Test Report
         uses: mikepenz/action-junit-report@v4
         if: always() 
