fix: Cambiar umbral de cobertura a 80%
- Cambiar minimum de 0.00 a 0.80 en jacocoTestCoverageVerification
- Actualizar comentarios en workflow para reflejar 80% de cobertura
- Mantener configuración optimizada para tests unitarios
- Validar que la cobertura sea al menos 80% del código ejecutado

Esto debería pasar la validación de cobertura del 80%

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Run Unit Tests and Generate Coverage Report
         run: ./gradlew testDebugUnitTest jacocoTestReport
 
-      # 4. VALIDA la Cobertura (0% - solo código ejecutado)
-      # Esta tarea valida la cobertura solo del código que se ejecutó
-      - name: Validate Coverage (0% - solo código ejecutado)
+      # 4. VALIDA la Cobertura (80%)
+      # Esta tarea valida que la cobertura sea al menos 80%
+      - name: Validate Coverage (80%)
         run: ./gradlew jacocoTestCoverageVerification
 
       # 5. Sube el reporte HTML como Artifact
