--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   test_and_coverage:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest  # Se recomienda macos para un mejor rendimiento del emulador con KVM
     
     steps:
       - name: Checkout Code
@@ -28,9 +28,12 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 3. 🚀 Build con Gradle y Genera Reporte de Cobertura
-      - name: Build with Gradle and generate coverage report
-        run: ./gradlew clean jacocoTestReport
+      # 3. 🚀 Ejecutar Emulador Android y Tests
+      - name: Run Android Emulator and Tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 33 # Puedes ajustar el nivel de la API según tus necesidades
+          script: ./gradlew clean jacocoTestReport
 
       # 4. VALIDA la Cobertura (0%)
       # Esta tarea valida la cobertura del código ejecutado
