fix: Especificar arquitectura x86_64 para emulador Android API 33
🛠️ Solución: Especificar la Arquitectura del Emulador
- Agregar arch: x86_64 para usar imagen del sistema de 64 bits
- Agregar disable-animations: true para mejorar rendimiento
- Esto soluciona el error: Failed to find package 'system-images;android-33;default;x86'

El problema era que la imagen x86 (32-bit) no está disponible para API 33.
La arquitectura x86_64 (64-bit) es el estándar actual y sí está disponible.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 33 # Puedes ajustar el nivel de la API según tus necesidades
+          arch: x86_64 # Especificar arquitectura 64-bit para API 33
+          disable-animations: true # Mejorar rendimiento del emulador
           script: ./gradlew clean jacocoTestReport
 
       # 4. VALIDA la Cobertura (0%)
