fix: Cambiar arquitectura del emulador a ARM para compatibilidad con runners de GitHub
🛠️ Solución Final: Usar la Arquitectura Correcta
- Cambiar arch: x86_64 a arch: arm64-v8a
- Esto soluciona: FATAL | Avd's CPU Architecture 'x86_64' is not supported by the QEMO2 emulator on aarch64 host

El problema era incompatibilidad de CPU:
- Runners de GitHub Actions (macOS): arquitectura ARM (aarch64)
- Emulador anterior: arquitectura Intel/AMD (x86_64)
- Solución: usar imagen ARM (arm64-v8a) que coincida con la máquina host

Ahora el emulador debería iniciarse correctamente y ejecutar los tests.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 33 # Puedes ajustar el nivel de la API según tus necesidades
-          arch: x86_64 # Especificar arquitectura 64-bit para API 33
+          arch: arm64-v8a # Cambiar a arquitectura ARM para compatibilidad con runners de GitHub
           disable-animations: true # Mejorar rendimiento del emulador
           # Configuración para modo headless y renderizado por software
           emulator-options: "-no-window -no-snapshot -no-boot-anim -gpu swiftshader_indirect"
