--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           arch: arm64-v8a # Cambiar a arquitectura ARM para compatibilidad con runners de GitHub
           disable-animations: true # Mejorar rendimiento del emulador
           # Configuración para modo headless y renderizado por software
-          emulator-options: "-no-window -no-snapshot -no-boot-anim -gpu swiftshader_indirect"
+          emulator-options: "-no-window -no-snapshot -no-boot-anim -gpu swiftshader_indirect -accel off"
           ram-size: 2048M # Asignar más memoria RAM
           disk-size: 2048M # Asignar más espacio en disco
           script: ./gradlew clean jacocoTestReport
