fix: Ejecutar SOLO unit tests y cobertura con createDebugUnitTestCoverageReport
- Reemplazar testDebugUnitTest jacocoTestReport por createDebugUnitTestCoverageReport
- Subir artefacto desde app/build/reports/coverage/test/debug
- Evita cualquier dependencia en emulador o pruebas instrumentadas

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,12 +26,12 @@ jobs:
       run: chmod +x gradlew
 
     - name: Run unit tests and generate coverage report
-      # Esta tarea solo ejecuta pruebas unitarias y genera su reporte
-      run: ./gradlew testDebugUnitTest jacocoTestReport
+      # Ejecuta SOLO pruebas unitarias y genera cobertura de unit tests
+      run: ./gradlew createDebugUnitTestCoverageReport
 
     - name: Upload coverage report as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: jacoco-html-report
-        # Ruta del reporte generado por jacocoTestReport
-        path: app/build/reports/jacoco/jacocoTestReport/html
+        name: unit-test-coverage-html
+        # Ruta del reporte generado por createDebugUnitTestCoverageReport
+        path: app/build/reports/coverage/test/debug
