--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,10 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
-    - name: Run unit tests and generate coverage report
-      # Ejecuta SOLO pruebas unitarias y genera cobertura de unit tests
-      run: ./gradlew createDebugUnitTestCoverageReport
+    - name: Run unit tests and check coverage threshold
+      # 1. Corre las pruebas y genera el reporte.
+      # 2. Ejecuta la verificación. Si es menor a 70%, este comando fallará.
+      run: ./gradlew createDebugUnitTestCoverageReport jacocoTestCoverageVerification
 
     - name: Upload coverage report as artifact
       uses: actions/upload-artifact@v4
